<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/eventsbg"
    android:orientation="vertical"
    tools:context="sep_group_7.SurreyMeets.Discover">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">


        <TextView

            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_light"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:text="@string/discover"
            android:textColor="#FFFFFF"
            android:textSize="40sp" />
        <CheckBox
            android:id="@+id/nearby"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/nearby"
            android:fontFamily="@font/open_sans_light"
            android:textSize="20dp" />


        <EditText
            android:id="@+id/search_text"
            android:layout_width="300sp"
            android:layout_height="35sp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/search_layout"
            android:hint="@string/search"
            android:padding="5sp" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">


            <RadioButton
                android:id="@+id/name_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:checked="true"
                android:paddingRight="10sp"
                android:text="@string/Name"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/category_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:gravity="center"
                android:text="@string/category_for_discover"
                android:textSize="20sp" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/view_map_btn"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:background="@drawable/button"
        android:fontFamily="@font/open_sans_light"
        android:text="@string/view_events_on_map"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="30dp">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/discoverlist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:layout_weight="10" />
    </LinearLayout>

</LinearLayout>
