<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F8FE"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/eventsbg">

        <TextView
            android:id="@+id/textViewCreateEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="11dp"
            android:clickable="true"
            android:fontFamily="@font/open_sans_light"
            android:text="@string/createevent"
            android:textColor="#FFFFFF"
            android:textSize="50dp" />

        <ImageView
            android:id="@+id/addEventImageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@+id/textViewCreateEvent"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="11dp"
            android:clickable="true"
            android:src="@drawable/circle_add" />

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cv"
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/addEventImageView"
            android:layout_centerHorizontal="true"
            android:layout_margin="40dp"
            android:layout_marginTop="200dp"
            android:elevation="10dp"
            card_view:cardBackgroundColor="#F5F8FE"
            card_view:contentPadding="20dp"
            card_view:cardCornerRadius="2dp"
            card_view:cardElevation="10dp">

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="sep_group_7.SurreyMeets.AddEvent">


                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/open_sans_light"
                    android:text="@string/eventname"
                    android:textColor="#000000"
                    android:textSize="30dp" />

                <EditText
                    android:id="@+id/editTextName"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/textView3"
                    android:layout_alignBottom="@+id/textView3"
                    android:backgroundTint="@android:color/holo_red_light"
                    android:layout_marginStart="19dp"
                    android:layout_toEndOf="@+id/textView3"
                    android:fontFamily="@font/open_sans_light"
                    android:hint="@string/entername"
                    android:textColorHint="#000000"
                    android:textColor="#000000"/>

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/editTextName"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/open_sans_light"
                    android:text="@string/enterdescription"
                    android:textColor="#000000"
                    android:textSize="30dp" />

                <EditText
                    android:id="@+id/editTextDesc"
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView4"
                    android:backgroundTint="@android:color/holo_red_light"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="11dp"
                    android:gravity="bottom"
                    android:hint="@string/enterdesc"
                    android:textColorHint="#000000"
                    android:textColor="#000000"
                    />


                <TextView
                    android:id="@+id/category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textView5"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/open_sans_light"
                    android:text="@string/category"
                    android:textColor="#000000"
                    android:textSize="30dp" />

                <Spinner
                    android:backgroundTint="@android:color/holo_red_light"
                    android:textColorHint="#000000"
                    android:id="@+id/spinnerCategory"
                    android:hint="Sports"
                    android:textColor="#000000"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:layout_alignStart="@+id/category"
                    android:layout_alignTop="@+id/category"
                    android:layout_marginStart="152dp"
                    android:layout_marginTop="6dp" />


                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/editTextDesc"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/open_sans_light"
                    android:text="@string/participants"
                    android:textColor="#000000"
                    android:textSize="30dp" />

                <EditText
                    android:id="@+id/editTextParticipants"
                    android:layout_width="100dp"
                    android:textColorHint="#000000"
                    android:layout_height="40dp"
                    android:textColor="#000000"
                    android:hint="Number 0"
                    android:backgroundTint="@android:color/holo_red_light"
                    android:layout_alignBaseline="@+id/textView5"
                    android:layout_alignStart="@+id/editTextName"
                    android:layout_alignBottom="@+id/textView5"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/category"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/open_sans_light"
                    android:text="@string/location"
                    android:textColor="#000000"
                    android:textSize="30dp" />

                <EditText
                    android:id="@+id/editTextLocation"
                    android:textColorHint="#000000"
                    android:backgroundTint="@android:color/holo_red_light"
                    android:layout_width="200dp"
                    android:layout_height="80px"
                    android:layout_alignStart="@+id/spinnerCategory"
                    android:layout_alignBottom="@+id/textView7"
                    android:hint="@string/enterlocation"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView7"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/open_sans_light"
                    android:text="@string/date"
                    android:textColor="#000000"
                    android:textSize="30dp" />

                <Button
                    android:id="@+id/btnSetDate"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/textView8"
                    android:layout_marginStart="12dp"
                    android:layout_toEndOf="@+id/textView8"
                    android:text="@string/setDate" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/textView8"
                    android:layout_marginEnd="-11dp"
                    android:layout_marginBottom="2dp"
                    android:layout_toStartOf="@+id/btnSetTime"
                    android:text="@string/time"
                    android:textColor="#000000"
                    android:fontFamily="@font/open_sans_light"
                    android:textSize="30dp" />

                <Button
                    android:id="@+id/btnSetTime"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/textView8"
                    android:layout_alignEnd="@+id/editTextName"
                    android:layout_marginStart="12dp"
                    android:text="@string/setTime" />

                <TextView
                    android:id="@+id/setDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btnSetDate"
                    android:layout_alignStart="@+id/btnSetDate"
                    android:layout_alignEnd="@+id/btnSetDate"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/open_sans_light"
                    android:text="Date not set."
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/setTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btnSetTime"
                    android:layout_alignStart="@+id/btnSetTime"
                    android:layout_alignEnd="@+id/btnSetTime"
                    android:layout_marginTop="20dp"
                    android:text="Time is not set."
                    android:textAlignment="center"
                    android:fontFamily="@font/open_sans_light"
                    android:textColor="#000000"
                    android:textSize="20dp" />

                <Button
                    android:id="@+id/btnAddEvent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/setDate"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:text="@string/create"
                    android:padding="10dp"
                    android:fontFamily="@font/open_sans_light"
                    android:textSize="30dp" />

            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </RelativeLayout>
</ScrollView>