<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:id="@+id/showProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f5f8fe"
        tools:context="sep_group_7.SurreyMeets.EditProfile">

        <RelativeLayout
            android:id="@+id/linProf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/profilebuble"
            android:gravity="center"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/relProf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/set_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="25dp"
                    android:layout_marginRight="10dp"
                    android:fontFamily="@font/open_sans_light"
                    android:text="Welcome"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="40dp" />

                <TextView
                    android:id="@+id/editProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/logout_btn"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical"
                    android:paddingBottom="21dp"
                    android:text="..."
                    android:textColor="#FFFFFF"
                    android:textSize="50dp" />

                <TextView
                    android:id="@+id/logout_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:fontFamily="@font/open_sans_light"
                    android:padding="21sp"
                    android:text="Log Out"
                    android:textColor="#FFFFFF"
                    android:textSize="30sp" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profilePic"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_below="@+id/set_name"
                    android:layout_centerHorizontal="true"
                    android:layout_toEndOf="@+id/textView"
                    android:clickable="true"
                    android:src="@drawable/edit" />

                <TextView
                    android:id="@+id/age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/profilePic"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/open_sans_light"
                    android:text="@string/age"
                    android:textColor="#FFFFFF"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/set_age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/age"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="30dp"
                    android:fontFamily="@font/open_sans_light"
                    android:textSize="40dp"
                    android:textStyle="bold" />
            </RelativeLayout>


        </RelativeLayout>


        <android.support.v7.widget.CardView
            android:id="@+id/profileContent"
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/linProf"
            android:layout_centerHorizontal="true"
            android:layout_margin="40dp"
            android:layout_marginTop="200dp"
            android:elevation="10dp"
            card_view:cardBackgroundColor="#FFFFFF"
            card_view:cardCornerRadius="15dp"
            card_view:cardElevation="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/bio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/open_sans_light"
                    android:text="@string/bio"
                    android:textColor="#000000"
                    android:textSize="25dp" />

                <TextView
                    android:id="@+id/set_bio"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:layout_below="@+id/bio"
                    android:fontFamily="@font/open_sans_light"
                    android:layout_marginBottom="10dp"
                    android:textColor="#000000"
                    android:layout_centerHorizontal="true"
                    android:textSize="20dp" />
                <View
                    android:layout_width="fill_parent"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_height="2dp"
                    android:layout_below="@id/bio"
                    android:background="@color/colorAccent"/>
                <TextView
                    android:id="@+id/statistics"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/set_bio"
                    android:fontFamily="@font/open_sans_light"
                    android:text="@string/statistics"
                    android:layout_centerHorizontal="true"
                    android:textColor="#000000"
                    android:textSize="25dp" />
                <View
                    android:layout_width="fill_parent"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_height="2dp"
                    android:layout_below="@id/statistics"
                    android:background="@color/colorAccent"/>

                <TextView
                    android:id="@+id/createdEvents"
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/statistics"
                    android:text="@string/eventscreated"
                    android:textColor="#000000"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/open_sans_light"
                    android:textSize="25dp" />

                <TextView
                    android:id="@+id/eventsCreatedStats"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/statistics"
                    android:layout_marginLeft="20dp"
                    android:textColor="#000000"
                    android:layout_toRightOf="@+id/createdEvents"
                    android:text="0"
                    android:fontFamily="@font/open_sans_light"
                    android:textSize="25dp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/eventsJoined"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/createdEvents"
                    android:text="@string/eventsjoined"
                    android:textColor="#000000"
                    android:layout_centerHorizontal="true"
                    android:textSize="25dp"
                    android:fontFamily="@font/open_sans_light"
                    android:paddingBottom="20dp"/>

                <TextView
                    android:id="@+id/eventsJoinedStats"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/eventsCreatedStats"
                    android:layout_alignStart="@+id/eventsCreatedStats"
                    android:text="0"
                    android:textColor="#000000"
                    android:fontFamily="@font/open_sans_light"
                    android:textStyle="bold"
                    android:textSize="25dp"/>
            </RelativeLayout>


        </android.support.v7.widget.CardView>


    </RelativeLayout>
</ScrollView>