<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:id="@+id/showProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f5f8fe"
        tools:context="sep_group_7.SurreyMeets.EditProfile">

        <RelativeLayout
            android:id="@+id/linProf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/profilebuble"
            android:gravity="center"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/relProf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edit_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="25dp"
                    android:layout_marginRight="10dp"
                    android:fontFamily="@font/open_sans_light"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="70px" />

                <TextView
                    android:id="@+id/done"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/edit_name"
                    android:layout_alignParentEnd="true"
                    android:fontFamily="@font/open_sans_light"
                    android:padding="21sp"
                    android:textColor="#FFFFFF"
                    android:text="Done"
                    android:textSize="30sp" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/view_profilePic"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_below="@+id/edit_name"
                    android:layout_centerHorizontal="true"
                    android:layout_toEndOf="@+id/textView"
                    android:clickable="true"
                    android:src="@drawable/edit" />
                <TextView
                    android:id="@+id/changePic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/view_profilePic"
                    android:layout_centerHorizontal="true"
                    android:text="@string/profilePicture"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/changePic"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/open_sans_light"
                    android:text="@string/age"
                    android:textColor="#FFFFFF"
                    android:textSize="30sp" />

                <EditText
                    android:id="@+id/edit_age"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/age"
                    android:fontFamily="@font/open_sans_light"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:textSize="40dp" />
            </RelativeLayout>


        </RelativeLayout>


        <android.support.v7.widget.CardView
            android:id="@+id/profileContent"
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/linProf"
            android:layout_centerHorizontal="true"
            android:layout_margin="40dp"
            android:layout_marginTop="200dp"
            android:elevation="10dp"
            card_view:cardBackgroundColor="#FFFFFF"
            card_view:cardCornerRadius="15dp"
            card_view:cardElevation="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/bio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/open_sans_light"
                    android:text="@string/bio"
                    android:textColor="#000000"
                    android:textSize="25dp" />
                <View
                    android:layout_width="fill_parent"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_height="2dp"
                    android:layout_below="@id/bio"
                    android:background="@color/colorAccent"/>

                <EditText
                    android:id="@+id/edit_bio"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:layout_below="@+id/bio"
                    android:fontFamily="@font/open_sans_light"
                    android:layout_marginBottom="10dp"
                    android:textColor="#000000"
                    android:layout_centerHorizontal="true"
                    android:textSize="20dp" />

            </RelativeLayout>


        </android.support.v7.widget.CardView>


    </RelativeLayout>
</ScrollView>